--- a/src/header/header.scss
+++ b/src/header/header.scss
@@ -129,13 +129,14 @@ nav {
 @media screen and (max-width:1105px) {
 
     nav {
-        width: 100%;
-        position: fixed;
+        width: 0;
         top: 0;
         z-index: 5;
 
         .Nav-top {
             background-color: #d6d3d315;
+            position: fixed;
+            width: 100%;
 
             ul {
                 li {
@@ -156,8 +157,10 @@ nav {
 
         // menu section
         .Nav-bottom {
+            position: fixed;
+            z-index: 1;
             height: 100vh;
-            width: 50%;
+            width: 50vw;
             display: block;
             margin-left: -100vw;
             transition: margin-left 0.3s ease-in-out;
